<resources>
    <string name="app_name">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bt_delete">Delete</string>
    <string name="bt_back">Back</string>
    <string name="create_note">Add Note</string>
    <string name="hint_title">Title</string>
    <string name="hint_desc">Description</string>
    <string name="bt_add">Add</string>
</resources>